delay each nav item slide and fix the issue on mobile where nav item slide out too slow

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,10 @@
     }
   }
 
+  .nav-item {
+    transform: translate(100%, 0);
+  }
+
   .text-large {
     font-size: 70px;
   }
