--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -99,30 +99,37 @@
     &.show {
       transform: translate(0, 0);
     }
+  }
+}
 
-    .nav-item {
-      padding: 20px;
-      transform: translate(
-        200%,
-        0
-      ); //put the element to the right, so when show, it comes from right to left
-      @include easeOut();
+.nav-item {
+  padding: 20px;
+  transform: translate(
+    300%,
+    0
+  ); //put the element to the right, so when show, it comes from right to left
+  @include easeOut();
 
-      &.show {
-        transform: translate(0, 0);
-      }
+  &.show {
+    transform: translate(0, 0);
+  }
 
-      .nav-link {
-        text-decoration: none;
-        font-size: 30px;
-        text-transform: uppercase;
-        @include easeOut();
+  .nav-link {
+    text-decoration: none;
+    font-size: 30px;
+    text-transform: uppercase;
+    @include easeOut();
 
-        &:hover {
-          color: $secondary-color;
-          font-size: 40px;
-        }
-      }
+    &:hover {
+      color: $secondary-color;
+      font-size: 40px;
     }
+  }
+}
+
+// Delay each nav item slide by 0.1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
   }
 }
